created bio section

--- a/html-elements/about.html
+++ b/html-elements/about.html
@@ -1,3 +1,17 @@
 <section id="about">
-    <img src="assets/photos/headshot.jpg" alt="" class="headshot">
+    <div class= "intro">
+        <div class="headshot">
+            <img src="assets/photos/headshot.jpg" alt="" class="headshot-img">
+        </div>
+        <div class="bio">
+            <p class="hello">
+                Hi, I'm Trevor,
+            </p>
+            <p class="about-me">
+                I still need to decide what to write here so for now I am just going to write some random stuff so that it appears as it should for formatting purposes. If you're reading this, my website isn't finished yet!
+            </p>
+        </div>
+    </div>
+    <div class="skills">
+    </div>
 </section>
