--- a/html-elements/right-nav-desktop.html
+++ b/html-elements/right-nav-desktop.html
@@ -1,13 +1,13 @@
 <nav id="right-nav-desktop">
     <ul>
         <li>
-            <a href="#home"> .home()</a> 
+            <a href="#home"> .home{}</a> 
         </li>
         <li>
-            <a href="#about">.about() </a> 
+            <a href="#about">.about{} </a> 
         </li>
         <li>
-            <a href="#portfolio">.projects() </a> 
+            <a href="#portfolio">.projects{} </a> 
         </li>
     </ul>
 
