Finished Bio Section

--- a/html-elements/about.html
+++ b/html-elements/about.html
@@ -1,17 +1,33 @@
 <section id="about">
     <div class= "intro">
         <div class="headshot">
-            <img src="assets/photos/headshot.jpg" alt="" class="headshot-img">
+            <img src="assets/photos/headshot.jpg" alt="">
         </div>
         <div class="bio">
             <h2>
                 Hi, I'm Trevor,
             </h2>
-            <p class="about-me">
-                I still need to decide what to write here so for now I am just going to write some random stuff so that it appears as it should for formatting purposes. If you're reading this, my website isn't finished yet!
+            <p>
+                I'm a student, a researcher, and an individual with a passion for software engineering and data science.
+                I would love to expand my skills into an internship position, so please reach out to see how I can grow into your company!
+                
             </p>
+            <div class="personal-interests">
+                <h3>Personal Interests...</h3>
+                <ul>
+                    <img src="assets/icons/about/hobbies/cycling.png" alt="">
+                    <img src="assets/icons/about/hobbies/dog.png" alt="">
+                    <img src="assets/icons/about/hobbies/photography.png" alt="">
+                    <img src="assets/icons/about/hobbies/piano.png" alt="">
+                </ul>
+            </div>
+            <div class="location">
+                <img src="assets/icons/about/location.png" alt="">
+                <h3> Fort Collins, CO</h3>
+            </div>
         </div>
     </div>
-    <div class="skills">
-    </div>
+    <!-- <div class="skills">
+        <h1>Skills</h1>
+    </div> -->
 </section>
