Added email buttonn functionality

--- a/html-elements/left-nav-desktop.html
+++ b/html-elements/left-nav-desktop.html
@@ -1,7 +1,7 @@
 <nav id="left-nav-desktop">
     <ul>
         <li>
-            <a href="FIXME" target="_blank">
+            <a href="mailto:chartier.trevor@gmail.com" target="_blank">
                 <img src="assets/icons/sidebar/paper-airplane.png" alt="">
             </a>
         </li>
