--- a/html-elements/about.html
+++ b/html-elements/about.html
@@ -27,7 +27,7 @@
             </div>
         </div>
     </div>
-    <!-- <div class="skills">
+    <div class="skills">
         <h1>Skills</h1>
-    </div> -->
+    </div>
 </section>
