Added progress bars for skills

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <main id="content">
         <div id="home-placeholder"></div>
         <div id="about-placeholder"></div>
+        <div> id = "skills </div>
     </main>
     
     <script src="scripts/includeHTML.js"></script>
