Experience tree layout and file separation

--- a/index.html
+++ b/index.html
@@ -7,18 +7,28 @@
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/sidebars.css">
     <link rel="stylesheet" href="css/home.css">
-    <link rel="stylesheet" href="css/about.css">
+    <link rel="stylesheet" href="css/intro.css">
+    <link rel="stylesheet" href="css/skills.css">
+    <link rel="stylesheet" href="css/experience.css">
     <link rel="stylesheet" href="css/projects.css">
+
 </head>
 <body>
     <div id="left-nav-desktop-placeholder"></div>
     <div id="right-nav-desktop-placeholder"></div>
     <main id="content">
-        <div id="home-placeholder"></div>
-        <div id="about-placeholder"></div>
-        <div> id = "skills </div>
+        <section id="home-placeholder"></section>
+        <section id="about">
+            <div id="intro-placeholder"></div>
+            <div id="skills-placeholder"></div>
+            <div id="experience-placeholder"></div>
+        </section>
+        <section id="projects-placeholder"></section>
+        
+
     </main>
     
+
     <script src="scripts/includeHTML.js"></script>
 </body>
 </html>
