Projects slider format

--- a/html-elements/experience.html
+++ b/html-elements/experience.html
@@ -1,5 +1,5 @@
 <section class="experience">
-    <h1>My Experience</h1>
+    <h1 class="section title">My Experience</h1>
     <div class="experience-tree">
         <div class="tree-side" id="left-tree">
             <div class="tree-node">
