--- a/html-elements/right-nav-desktop.html
+++ b/html-elements/right-nav-desktop.html
@@ -7,7 +7,7 @@
             <a href="#about">.about{} </a> 
         </li>
         <li>
-            <a href="#portfolio">.projects{} </a> 
+            <a href="#projects">.projects{} </a> 
         </li>
     </ul>
 
