--- a/html-elements/skills.html
+++ b/html-elements/skills.html
@@ -1,5 +1,5 @@
 <section class="skills">
-    <h1>My Skills</h1>
+    <h1 class="section-title">My Skills</h1>
     <div class="skills-container">
         <div class="languages">
             <div>
