--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="css/skills.css">
     <link rel="stylesheet" href="css/experience.css">
     <link rel="stylesheet" href="css/projects.css">
-
+    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
 </head>
 <body>
     <div id="left-nav-desktop-placeholder"></div>
@@ -24,11 +25,12 @@
             <div id="experience-placeholder"></div>
         </section>
         <section id="projects-placeholder"></section>
-        
-
     </main>
+    <div id="footer-placeholder"></div>
     
 
     <script src="scripts/includeHTML.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="scripts/swipe.js"></script>
 </body>
 </html>
