Finished experience section and added nav-bar animations

--- a/html-elements/experience.html
+++ b/html-elements/experience.html
@@ -1,27 +1,69 @@
-<section class="experience">
-    <h1 class="section title">My Experience</h1>
+<article class="experience">
+    <h1 class="section-title">My Experience</h1>
     <div class="experience-tree">
         <div class="tree-side" id="left-tree">
             <div class="tree-node">
-                <div class="exp-content" id="research">
-                    <p>Undergraduate ML Research</p>
+                <div class="exp-content" id="carpentry">
+                    <h2 class="role">Carpentry Apprentice</h3>
+                    <h3 class="organization"> Blue Ox Artisan Builders</h3>
+                    <ul class="achievements">
+                        <li><p>Developed work ethic, team communication, and problem solving skills that have made me a more successfull computer scientist</p></li>
+                    </ul>
+                    <div class="date">
+                        <img src="assets/icons/calendar.png" alt="" class="calendar">
+                        <small>May 2020 - Aug 2023 (summers)</small>
+                    </div>
                 </div>
-                <img src="assets/icons/about/experience/left-branch.png" alt="">
+                <div class="branch">
+                    <div class="leaf"></div>
+                    <div class="branch-line"></div>
+                </div>
             </div>
+
+            <div class="tree-node">
+                <div class="exp-content" id="research">
+                    <h2 class="role">Machine Learning Researcher</h3>
+                    <h3 class="organization"> Colorado State University -<br> Computer Vision Lab</h3>
+                    <ul class="achievements">
+                        <li><p>Hands on experience with full ML pipelines</p></li>
+                        <li><p>Led a state of the art detection project that was accepted to an international conference</p></li>
+                    </ul>
+                    <div class="date">
+                        <img src="assets/icons/calendar.png" alt="" class="calendar">
+                        <small>Sep 2023 - Present</small>
+                    </div>
+                </div>
+                <div class="branch">
+                    <div class="leaf"></div>
+                    <div class="branch-line"></div>
+                </div>
+            </div>
+
         </div>
         <div class="tree-side" id="right-tree">
             <div class="tree-node">
-                <img src="assets/icons/about/experience/right-branch.png" alt="">
-                <div class="exp-content" id="begin-csu">
-
+                <div class="branch">
+                    <div class="branch-line"></div>
+                    <div class="leaf"></div>
+                </div>
+                <div class="exp-content" id="university">
+                    <h2 class="role">B.S. Computer Science</h3>
+                    <h3 class="organization"> Colorado State University</h3>
+                    <ul class="achievements">
+                        <li><p>4.0 GPA</p></li>
+                        <li><p>Concentration in Machine Learning & Artificial Intelligence</p></li>
+                        <li><p>Minor in Data Science</p></li>
+                        <li><p>4th Paradigm Data Science Club, RamHack Computer Science Club</p></li>
+                    </ul>
+                    <div class="date">
+                        <img src="assets/icons/calendar.png" alt="" class="calendar">
+                        <small>Aug 2022 - Dec 2025 (anticipated)</small>
+                    </div>
                 </div>
             </div>
-            <div class="tree-node">
-                <img src="assets/icons/about/experience/right-branch.png" alt="">
-                <div class="exp-content" id="end-csu">
 
-                </div>
-            </div>
+            
+
         </div>
     </div>
-</section>
+</article>
