--- a/html-elements/intro.html
+++ b/html-elements/intro.html
@@ -1,4 +1,4 @@
-<section id= "intro">
+<article id= "intro">
     <div class="headshot">
         <img src="assets/photos/headshot.jpg" alt="">
     </div>
@@ -25,4 +25,4 @@
             <h3> Fort Collins, CO</h3>
         </div>
     </div>
-</section>
+</article>
