--- a/html-elements/skills.html
+++ b/html-elements/skills.html
@@ -1,4 +1,4 @@
-<section class="skills">
+<article class="skills">
     <h1 class="section-title">My Skills</h1>
     <div class="skills-container">
         <div class="languages">
@@ -106,4 +106,4 @@
             </ul>
         </div>
     </div>
-</section>
+</article>
