--- a/index.html
+++ b/index.html
@@ -16,15 +16,16 @@
 </head>
 <body>
     <div id="left-nav-desktop-placeholder"></div>
-    <div id="right-nav-desktop-placeholder"></div>
+    <div id="right-nav-desktop-placeholder">
+    </div>
     <main id="content">
-        <section id="home-placeholder"></section>
+        <div class="placeholder-section" id="home-placeholder"></div>
         <section id="about">
             <div id="intro-placeholder"></div>
             <div id="skills-placeholder"></div>
             <div id="experience-placeholder"></div>
         </section>
-        <section id="projects-placeholder"></section>
+        <div class="placeholder-section" id="projects-placeholder"></div>
     </main>
     <div id="footer-placeholder"></div>
     
