--- a/html-elements/projects.html
+++ b/html-elements/projects.html
@@ -4,33 +4,36 @@
         <img src="assets/icons/projects/chevron-prev.png" alt="" class="swiper-button-prev" id="chevron">
         <div class="swiper">
             <div class="swiper-wrapper">
-              <div class="swiper-slide" id="this-webpage">
-                <img src="assets/project-photos/this-webpage.png" alt="" class="project-image">
-                <div class="description-container">
-                    <h2 class="project-title"> Personal Portfolio</h2>
-                    <h3 class="project-subtitle">This webpage!</h3>
-                    <p class="project-description">
-                        Built from scratch using HTML5, CSS, and JavaScript.
-                    </p>
-                    <div class="link-box">
-                        <a href="https://github.com/TrevorChartier/TrevorChartier.github.io" target="_blank">
-                            <div class="button">
-                                <p>Code</p>
-                                <img src="assets/icons/sidebar/github-icon1.png" alt="" id="git-button-img">
-                            </div>
-                        </a>
-                        <a href="https://trevorchartier.github.io/#about" target="_blank">
-                            <div class="button">
-                                <p> View</p>
-                                <img src="assets/icons/arrow.png" alt="">
-                            </div>
-                        </a>
+
+                <div class="swiper-slide" id="this-webpage">
+                    <img src="assets/project-photos/this-webpage.png" alt="" class="project-image">
+                    <div class="description-container">
+                        <h2 class="project-title"> Personal Portfolio</h2>
+                        <h3 class="project-subtitle">This webpage!</h3>
+                        <p class="project-description">
+                            Built from scratch using HTML5, CSS, and JavaScript.
+                        </p>
+                        <div class="link-box">
+                            <a href="https://github.com/TrevorChartier/TrevorChartier.github.io" target="_blank">
+                                <div class="button">
+                                    <p>Code</p>
+                                    <img src="assets/icons/sidebar/github-icon1.png" alt="" id="git-button-img">
+                                </div>
+                            </a>
+                            <a href="https://trevorchartier.github.io/#about" target="_blank">
+                                <div class="button">
+                                    <p> View</p>
+                                    <img src="assets/icons/arrow.png" alt="">
+                                </div>
+                            </a>
+                        </div>
                     </div>
                 </div>
+            
+                <div class="swiper-slide">
+                    <h2 class="project-title"> More Coming Soon!</h2>
+                </div>
                 
-            </div>
-              <div class="swiper-slide">Slide 2</div>
-              <div class="swiper-slide">Slide 3</div>
             </div>
           </div>
         <img src="assets/icons/projects/chevron-next.png" alt="" class="swiper-button-next" id="chevron">
