neuromorphism design elements & background dots

--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
     <link rel="stylesheet" href="css/projects.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
+    <link rel="stylesheet" href="css/dots.css">
 </head>
 <body>
+    <div class="dot-container">
+
+    </div>
     <div id="left-nav-desktop-placeholder"></div>
     <div id="right-nav-desktop-placeholder">
     </div>
