Footer, and more neuromorphism styling

--- a/html-elements/footer.html
+++ b/html-elements/footer.html
@@ -1,3 +1,19 @@
 <footer>
-    <small> </small>
+    <img src="assets/name/white.png" alt="" class="footer-signature">
+    <div class="personal-info-buttons">
+        <a href="#" onclick="copyEmail(event)">
+            <div class="button" id="email-button">
+                <p>chartier.trevor@gmail.com</p>
+            </div>
+        </a>
+        <a href="assets/TrevorChartierResume.pdf" target="_blank">
+            <div class="button" id="resume-button">
+                <p>View My Resume</p>
+            </div>
+        </a>
+    </div>
+    <div class="legal-info">
+        <div class="copyright">&copy; 2024 Trevor Chartier</div>
+        <div><a href="https://icons8.com" target="_blank" id="icons8">Icons by Icons8</a></div>
+    </div>
 </footer>
