home-screen bookmark icon

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Trevor Chartier</title>
     <link rel="shortcut icon" href="/assets/favicon/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/assets/favicon/favicon-16x16.png" type="image/png">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
 
 
     <!-- CSS Files -->
