--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="/assets/favicon/favicon-16x16.png" type="image/png">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
     <meta name="msapplication-TileColor" content="#45514a">
-    <meta name="theme-color" content="#ffffff">
+    <meta name="theme-color" content="#45514a">
     <link rel="mask-icon" href="assets/favicon/safari-pinned-tab.svg" color="#45514a">
 
 
