--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div id="footer-placeholder"></div>
     
 
-    <script src="scripts/includeHTML.js"></script>
+    <script src="scripts/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js" async></script>
 </body>
 </html>
