--- a/index.html
+++ b/index.html
@@ -1,48 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-VN9YPQLW6F"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-VN9YPQLW6F");
+    </script>
+    
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="{45514a}" />
     <title>Trevor Chartier</title>
-    <link rel="shortcut icon" href="/assets/favicon/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="/assets/favicon/favicon-16x16.png" type="image/png">
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
-    <meta name="msapplication-TileColor" content="#45514a">
-    <meta name="theme-color" content="#45514a">
-    <link rel="mask-icon" href="assets/favicon/safari-pinned-tab.svg" color="#45514a">
-
+    <link
+      rel="shortcut icon"
+      href="/assets/favicon/favicon.ico"
+      type="image/x-icon"
+    />
+    <link
+      rel="icon"
+      href="/assets/favicon/favicon-16x16.png"
+      type="image/png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="assets/favicon/apple-touch-icon.png"
+    />
+    <meta name="msapplication-TileColor" content="#45514a" />
+    <meta name="theme-color" content="#45514a" />
+    <link
+      rel="mask-icon"
+      href="assets/favicon/safari-pinned-tab.svg"
+      color="#45514a"
+    />
 
     <!-- CSS Files -->
-    <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" href="css/sidebars.css">
-    <link rel="stylesheet" href="css/home.css">
-    <link rel="stylesheet" href="css/intro.css">
-    <link rel="stylesheet" href="css/skills.css">
-    <link rel="stylesheet" href="css/experience.css">
-    <link rel="stylesheet" href="css/projects.css">
-    <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
-    <link rel="stylesheet" href="css/dots.css">
-</head>
-<body>
+    <link rel="stylesheet" href="css/base.css" />
+    <link rel="stylesheet" href="css/sidebars.css" />
+    <link rel="stylesheet" href="css/home.css" />
+    <link rel="stylesheet" href="css/intro.css" />
+    <link rel="stylesheet" href="css/skills.css" />
+    <link rel="stylesheet" href="css/experience.css" />
+    <link rel="stylesheet" href="css/projects.css" />
+    <link rel="stylesheet" href="css/footer.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
+    <link rel="stylesheet" href="css/dots.css" />
+  </head>
+  <body>
     <div class="dot-container"></div>
     <div id="left-nav-desktop-placeholder"></div>
-    <div id="right-nav-desktop-placeholder">
-    </div>
+    <div id="right-nav-desktop-placeholder"></div>
     <main id="content">
-        <div class="placeholder-section" id="home-placeholder"></div>
-        <section id="about">
-            <div id="intro-placeholder"></div>
-            <div id="skills-placeholder"></div>
-            <div id="experience-placeholder"></div>
-        </section>
-        <div class="placeholder-section" id="projects-placeholder"></div>
+      <div class="placeholder-section" id="home-placeholder"></div>
+      <section id="about">
+        <div id="intro-placeholder"></div>
+        <div id="skills-placeholder"></div>
+        <div id="experience-placeholder"></div>
+      </section>
+      <div class="placeholder-section" id="projects-placeholder"></div>
     </main>
     <div id="footer-placeholder"></div>
-    
 
     <script src="scripts/script.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js" async></script>
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"
+      async
+    ></script>
+  </body>
 </html>
