Update Bio and Skills

--- a/html-elements/intro.html
+++ b/html-elements/intro.html
@@ -7,8 +7,10 @@
             Hi, I'm Trevor,
         </h2>
         <p>
-            I'm a student, a researcher, and an individual with a passion for software engineering and data science.
-            I would love to expand my skills into an internship position, so please reach out to see how I can grow into your company!
+            I’m an award-winning machine learning researcher and computer science student
+             with a strong foundation in software engineering and developing predictive models. 
+            I thrive on tackling complex technical challenges and am eager to apply my skills in 
+            building scalable, customer-focused solutions.
             
         </p>
         <div class="personal-interests">
