--- a/html-elements/skills.html
+++ b/html-elements/skills.html
@@ -20,15 +20,27 @@
                     </div>
                 </li>
                 <li>
-                    <p>R</p>
+                    <p>SQL</p>
                     <div class="progress-meter">
-                        <span style="width: 55%"></span>
+                        <span style="width: 50%"></span>
                     </div>
                 </li>
                 <li>
-                    <p>SQL</p>
+                    <p>C++</p>
                     <div class="progress-meter">
-                        <span style="width: 30%"></span>
+                        <span style="width: 50%"></span>
+                    </div>
+                </li>
+                <li>
+                    <p>JavaScript</p>
+                    <div class="progress-meter">
+                        <span style="width: 35%"></span>
+                    </div>
+                </li>
+                <li>
+                    <p>R</p>
+                    <div class="progress-meter">
+                        <span style="width: 35%"></span>
                     </div>
                 </li>
             </ul>
@@ -42,13 +54,19 @@
                 <li>
                     <p>Pandas</p>
                     <div class="progress-meter">
-                        <span style="width: 94%"></span>
+                        <span style="width: 90%"></span>
                     </div>
                 </li>
                 <li>
                     <p>NumPy</p>
                     <div class="progress-meter">
                         <span style="width: 85%"></span>
+                    </div>
+                </li>
+                <li>
+                    <p>SciKit-Learn</p>
+                    <div class="progress-meter">
+                        <span style="width: 60%"></span>
                     </div>
                 </li>
                 <li>
@@ -59,12 +77,24 @@
                 </li>
             </ul>
         </div>
-        <div class="front-end">
+        <div class="Web Development">
             <div>
                 <img src="assets/icons/about/skills/front-end.png" alt="">
-                <h2>Front End</h2>
+                <h2>Web Development</h2>
             </div>
             <ul>
+                <li>
+                    <p>REST APIs</p>
+                    <div class="progress-meter">
+                        <span style="width: 55%"></span>
+                    </div>
+                </li>
+                <li>
+                    <p>Node.js</p>
+                    <div class="progress-meter">
+                        <span style="width: 50%"></span>
+                    </div>
+                </li>
                 <li>
                     <p>HTML</p>
                     <div class="progress-meter">
@@ -82,19 +112,25 @@
         <div class="tools">
             <div>
                 <img src="assets/icons/about/skills/tools.png" alt="">
-                <h2>Tools</h2>
+                <h2>Tools/Methodologies</h2>
             </div>
             <ul>
                 <li>
                     <p>Git</p>
                     <div class="progress-meter">
-                        <span style="width: 75%"></span>
+                        <span style="width: 80%"></span>
                     </div>
                 </li>
                 <li>
-                    <p>Jupyter</p>
+                    <p>Agile/Scrum</p>
                     <div class="progress-meter">
-                        <span style="width: 95%"></span>
+                        <span style="width: 83%"></span>
+                    </div>
+                </li>
+                <li>
+                    <p>Postman</p>
+                    <div class="progress-meter">
+                        <span style="width: 78%"></span>
                     </div>
                 </li>
                 <li>
@@ -102,6 +138,12 @@
                     <div class="progress-meter">
                         <span style="width: 95%"></span>
                     </div>    
+                </li>
+                <li>
+                    <p>Jupyter</p>
+                    <div class="progress-meter">
+                        <span style="width: 95%"></span>
+                    </div>
                 </li>
             </ul>
         </div>
