--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="{45514a}" />
     <title>Trevor Chartier</title>
+    
+    <!-- Favicon -->
     <link
       rel="shortcut icon"
       href="/assets/favicon/favicon.ico"
