Update ML Research Experience Card

--- a/html-elements/experience.html
+++ b/html-elements/experience.html
@@ -8,8 +8,14 @@
                     <h2 class="role">Machine Learning Researcher</h3>
                     <h3 class="organization"> Colorado State University -<br> Computer Vision Lab</h3>
                     <ul class="achievements">
-                        <li><p>Hands on experience with full ML pipelines</p></li>
-                        <li><p>Led a state of the art detection project that was accepted to an international conference</p></li>
+                        <li><p>
+                            <strong>Led the development of a state-of-the-art detection system</strong> using eye-gaze data for internal state
+                            detection, <strong>earning the best student paper and presentation award</strong> at an international, peer-reviewed conference.
+                        </p></li>
+                        <li><p>
+                            <strong>Managed full ML pipelines</strong>, including data cleaning, model training, and evaluation, 
+                            delivering insights for affective computing and computer vision tasks.
+                        </p></li>                        
                     </ul>
                     <div class="date">
                         <img src="assets/icons/calendar.png" alt="" class="calendar">
