Update bio wording

--- a/html-elements/intro.html
+++ b/html-elements/intro.html
@@ -7,10 +7,10 @@
             Hi, I'm Trevor,
         </h2>
         <p>
-            I’m an award-winning machine learning researcher and computer science student
-             with a strong foundation in software engineering and developing predictive models. 
-            I thrive on tackling complex technical challenges and am eager to apply my skills in 
-            building scalable, customer-focused solutions.
+            I’m an award-winning machine learning researcher and a scholarship student of computer science and data science.
+            My strong foundation in software engineering and predictive modeling enables me to write
+            clean code that solves complex techinical challenges. I look forward to applying my skills to build 
+            scalable, customer-focused solutions.
             
         </p>
         <div class="personal-interests">
