Add Paw Planner Project

--- a/html-elements/projects.html
+++ b/html-elements/projects.html
@@ -9,6 +9,46 @@
     />
     <div class="swiper">
       <div class="swiper-wrapper">
+        <div class="swiper-slide" id="Paw Planner">
+          <div class="slide-container">
+            <a href="https://github.com/TrevorChartier/PawPlanner" target="_blank">
+              <img
+                src="assets/project-photos/PawPlanner.png"
+                alt=""
+                class="project-image"
+              />
+            </a>
+
+            <div class="description-container">
+              <h2 class="project-title">Paw Planner</h2>
+              <h3 class="project-subtitle">Backend Web Application</h3>
+              <p class="project-description">
+                RESTful API service built from scratch using Javascript with node.js. Queries a mySQL database to store and update data upon receiving HTTP requests.
+              </p>
+              <div class="link-box">
+                <a
+                  href="https://github.com/TrevorChartier/PawPlanner"
+                  target="_blank"
+                >
+                  <div class="button" id="code-button">
+                    <p>Code</p>
+                    <img
+                      src="assets/icons/sidebar/github-icon1.png"
+                      alt=""
+                      id="git-button-img"
+                    />
+                  </div>
+                </a>
+                <a
+                  href="https://github.com/TrevorChartier/PawPlanner"
+                  target="_blank"
+                >
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+
         <div class="swiper-slide" id="this-webpage">
           <div class="slide-container">
             <a href="https://trevorchartier.github.io/#about" target="_blank">
