Add Publications Section

--- a/html-elements/projects.html
+++ b/html-elements/projects.html
@@ -1,4 +1,4 @@
-<section id="projects">
+<section id="personal-projects">
   <h1 class="section-title">Projects</h1>
   <div class="swiper-container">
     <img
