--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
     <link rel="stylesheet" href="css/skills.css" />
     <link rel="stylesheet" href="css/experience.css" />
     <link rel="stylesheet" href="css/projects.css" />
+    <link rel="stylesheet" href="css/publications.css" />
     <link rel="stylesheet" href="css/footer.css" />
     <link
       rel="stylesheet"
@@ -65,13 +66,19 @@
     <div id="left-nav-desktop-placeholder"></div>
     <div id="right-nav-desktop-placeholder"></div>
     <main id="content">
-      <div class="placeholder-section" id="home-placeholder"></div>
+      <section id="home">
+        <div class="placeholder-section" id="home-placeholder"></div>
+      </section>
       <section id="about">
         <div id="intro-placeholder"></div>
         <div id="skills-placeholder"></div>
         <div id="experience-placeholder"></div>
       </section>
-      <div class="placeholder-section" id="projects-placeholder"></div>
+      <section id="projects">
+        <div class="placeholder-section" id="projects-placeholder"></div>
+        <div class="placeholder-section" id="publications-placeholder"></div>
+      </section>
+
     </main>
     <div id="footer-placeholder"></div>
 
