Add RealRegression Project

--- a/html-elements/projects.html
+++ b/html-elements/projects.html
@@ -9,21 +9,72 @@
     />
     <div class="swiper">
       <div class="swiper-wrapper">
+        <div class="swiper-slide" id="Real Estate Regression">
+          <div class="slide-container">
+            <a
+              href="https://github.com/TrevorChartier/RealEstateRegression/blob/main/RealEstateRegression.ipynb"
+              target="_blank"
+            >
+              <img
+                src="assets/project-photos/RealEstateRegression.png"
+                alt=""
+                class="project-image"
+              />
+            </a>
+            <div class="description-container">
+              <h2 class="project-title">Real Regression</h2>
+              <h3 class="project-subtitle">Machine Learning Model Pipeline</h3>
+              <p class="project-description">
+                The entire process of building a regression model to predict
+                housing prices of a NYC real estate dataset. Interpretations
+                of the findings included along the way. Data processing and feature engineering followed
+                by model training and tuning using scikit-learn and XGBoost led to the best
+                reported performance of any model on this publicly sourced
+                dataset.
+              </p>
+              <div class="link-box">
+                <a
+                  href="https://github.com/TrevorChartier/RealEstateRegression/blob/main/RealEstateRegression.ipynb"
+                  target="_blank"
+                >
+                  <div class="button" id="code-button">
+                    <p>Code</p>
+                    <img
+                      src="assets/icons/sidebar/github-icon1.png"
+                      alt=""
+                      id="git-button-img"
+                    />
+                  </div>
+                </a>
+                <a
+                  href="https://github.com/TrevorChartier/RealEstateRegression/blob/main/RealEstateRegression.ipynb"
+                  target="_blank"
+                >
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+
         <div class="swiper-slide" id="Paw Planner">
           <div class="slide-container">
-            <a href="https://github.com/TrevorChartier/PawPlanner" target="_blank">
+            <a
+              href="https://github.com/TrevorChartier/PawPlanner"
+              target="_blank"
+            >
               <img
                 src="assets/project-photos/PawPlanner.png"
                 alt=""
                 class="project-image"
               />
             </a>
-
             <div class="description-container">
               <h2 class="project-title">Paw Planner</h2>
               <h3 class="project-subtitle">Backend Web Application</h3>
               <p class="project-description">
-                RESTful API service built from scratch using Javascript with node.js. Queries a mySQL database to store and update data upon receiving HTTP requests.
+                RESTful API service built from scratch using Javascript with
+                node.js. Queries a mySQL database to store and update data upon
+                receiving HTTP requests.
               </p>
               <div class="link-box">
                 <a
