Remove Rick-Roll

--- a/html-elements/projects.html
+++ b/html-elements/projects.html
@@ -42,7 +42,7 @@
                 </a>
 
                 <a
-                  href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+                  href="https://github.com/TrevorChartier/LAYMO"
                   target="_blank"
                 >
                   <div class="button" id="learn-button">
