--- a/html-elements/projects.html
+++ b/html-elements/projects.html
@@ -47,7 +47,44 @@
                 >
                   <div class="button" id="learn-button">
                     <p>Learn More</p>
-                    
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="swiper-slide" id="MonoVO">
+          <div class="slide-container">
+            <a href="https://github.com/TrevorChartier/Mono_Visual_Odometry/blob/main/MonoVO.ipynb" target="_blank">
+              <img
+                src="assets/project-photos/monoVO.png"
+                alt=""
+                class="project-image"
+                ,
+                id="MonoVO-img"
+              />
+            </a>
+            <div class="description-container">
+              <h2 class="project-title">MonoVO</h2>
+              <h3 class="project-subtitle">Monocular Visual Odometry</h3>
+              <p class="project-description">
+                Implementation and comparison of traditional geometry-based and
+                modern deep learning methods for estimating camera motion from a
+                single video stream.
+              </p>
+              <div class="link-box">
+                <a
+                  href="https://github.com/TrevorChartier/Mono_Visual_Odometry/blob/main/MonoVO.ipynb"
+                  target="_blank"
+                >
+                  <div class="button" id="code-button">
+                    <p>Code</p>
+                    <img
+                      src="assets/icons/sidebar/github-icon1.png"
+                      alt=""
+                      id="git-button-img"
+                    />
                   </div>
                 </a>
               </div>
