--- a/html-elements/right-nav-desktop.html
+++ b/html-elements/right-nav-desktop.html
@@ -7,7 +7,7 @@
             <a href="#about" class="nav-link">.about{} </a> 
         </li>
         <li>
-            <a href="#projects" class="nav-link">.projects{} </a> 
+            <a href="#projects" class="nav-link">.portfolio{} </a> 
         </li>
     </ul>
 
