--- a/html-elements/experience.html
+++ b/html-elements/experience.html
@@ -8,21 +8,19 @@
                 <div class="branch-line"></div>
                 <div class="leaf"></div>
             </div>
-            <div class="exp-content" id="research">
-                <h2 class="role">Machine Learning Researcher</h2> <h3 class="organization"> Colorado State University -<br> Computer Vision Lab</h3>
-                <ul class="achievements">
-                    <li><p>
-                        <strong>Led the development of a state-of-the-art detection system</strong> using eye-gaze data for internal state
-                        detection, <strong>earning the best student paper and presentation award</strong> at an international, peer-reviewed conference.
-                    </p></li>
-                    <li><p>
-                        <strong>Managed full ML pipelines</strong>, including data cleaning, model training, and evaluation, 
-                        delivering insights for affective computing and computer vision tasks.
-                    </p></li>                        
-                </ul>
-                <div class="date">
-                    <img src="assets/icons/calendar.png" alt="" class="calendar">
-                    <small>Sep 2023 - Present</small>
+            <div class="exp-content" id="university">
+                <div class="exp-text">
+                    <h2 class="role">B.S. Computer Science</h2> <h3 class="organization"> Colorado State University</h3>
+                    <ul class="achievements">
+                        <li><p>4.0 GPA</p></li>
+                        <li><p>Concentration in Machine Learning & Artificial Intelligence</p></li>
+                        <li><p>Minor in Data Science</p></li>
+                        <li><p>4th Paradigm Data Science Club, RamHack Computer Science Club</p></li>
+                    </ul>
+                    <div class="date">
+                        <img src="assets/icons/calendar.png" alt="" class="calendar">
+                        <small>Aug 2022 - Dec 2025 </small>
+                    </div>
                 </div>
             </div>
         </div>
@@ -32,17 +30,55 @@
                 <div class="branch-line"></div>
                 <div class="leaf"></div>
             </div>
-            <div class="exp-content" id="university">
-                <h2 class="role">B.S. Computer Science</h2> <h3 class="organization"> Colorado State University</h3>
-                <ul class="achievements">
-                    <li><p>4.0 GPA</p></li>
-                    <li><p>Concentration in Machine Learning & Artificial Intelligence</p></li>
-                    <li><p>Minor in Data Science</p></li>
-                    <li><p>4th Paradigm Data Science Club, RamHack Computer Science Club</p></li>
-                </ul>
-                <div class="date">
-                    <img src="assets/icons/calendar.png" alt="" class="calendar">
-                    <small>Aug 2022 - Dec 2025 (anticipated)</small>
+            <div class="exp-content" id="empower">
+                <div class="exp-text">
+                    <h2 class="role">AI Software Engineer Intern</h2>
+                    <h3 class="organization">Empower - Innovation Lab</h3>
+                    <ul class="achievements">
+                        <li><p>
+                            <strong>Built a multi-agent LLM system</strong> to automate intake requests and enable dynamic clarification conversations via Microsoft Teams.
+                        </p></li>
+                        <li><p>
+                            <strong>Integrated FAISS-based semantic search</strong> to surface related backlog entries.
+                        </p></li>
+                    </ul>
+                    <div class="date">
+                        <img src="assets/icons/calendar.png" alt="" class="calendar">
+                        <small>May 2025 - Aug 2025</small>
+                    </div>
+                </div>
+                <div class="exp-img" id="empower">
+                    <img src="assets/experience_photos/empower.png" alt="Empower"/>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="tree-node">
+            <div class="branch">
+                <div class="branch-line"></div>
+                <div class="leaf"></div>
+            </div>
+            <div class="exp-content" id="research">
+                <div class="exp-text">
+                    <h2 class="role">Machine Learning Researcher</h2> <h3 class="organization"> Colorado State University -<br> Computer Vision Lab</h3>
+                    <ul class="achievements">
+                        <li><p>
+                            <strong>Led the development of a state-of-the-art detection system</strong> using eye-gaze data for internal state
+                            detection, <strong>earning the best student paper and presentation award</strong> at an international, peer-reviewed conference.
+                        </p></li>
+                        <li><p>
+                            <strong>Managed full ML pipelines</strong>, including data cleaning, model training, and evaluation, 
+                            delivering insights for affective computing and computer vision tasks.
+                        </p></li>                        
+                    </ul>
+                    <div class="date">
+                        <img src="assets/icons/calendar.png" alt="" class="calendar">
+                        <small>Sep 2023 - May 2025</small>
+                    </div>
+                </div>
+                <div class="exp-img" id="research">
+                    <img src="assets/experience_photos/cyber_award.png" alt=""/>
                 </div>
             </div>
         </div>
@@ -53,13 +89,15 @@
                 <div class="leaf"></div>
             </div>
             <div class="exp-content" id="carpentry">
-                <h2 class="role">Carpentry Apprentice</h2> <h3 class="organization"> Blue Ox Artisan Builders</h3>
-                <ul class="achievements">
-                    <li><p>Developed work ethic, team communication, and problem solving skills that have made me a more successfull computer scientist</p></li>
-                </ul>
-                <div class="date">
-                    <img src="assets/icons/calendar.png" alt="" class="calendar">
-                    <small>May 2020 - Aug 2023 (summers)</small>
+                <div class="exp-text">
+                    <h2 class="role">Carpentry Apprentice</h2> <h3 class="organization"> Blue Ox Artisan Builders</h3>
+                    <ul class="achievements">
+                        <li><p>Developed work ethic, team communication, and problem solving skills that have made me a more successfull computer scientist</p></li>
+                    </ul>
+                    <div class="date">
+                        <img src="assets/icons/calendar.png" alt="" class="calendar">
+                        <small>May 2020 - Aug 2023 (summers)</small>
+                    </div>
                 </div>
             </div>
         </div>
