Upload Laymo Image

--- a/html-elements/projects.html
+++ b/html-elements/projects.html
@@ -14,11 +14,11 @@
           <div class="slide-container">
             <a href="https://github.com/TrevorChartier/ImitationLearningLaymo" target="_blank">
               <img
-                src="assets/project-photos/imitationLearningLaymo.png"
+                src="assets/project-photos/ImitationLearningLaymo.png"
                 alt=""
                 class="project-image"
                 ,
-                id="laymo-gif"
+                id="laymo-img"
               />
             </a>
             <div class="description-container">
