Update Content for Undergrad Experience Card

--- a/html-elements/experience.html
+++ b/html-elements/experience.html
@@ -12,10 +12,11 @@
                 <div class="exp-text">
                     <h2 class="role">B.S. Computer Science</h2> <h3 class="organization"> Colorado State University</h3>
                     <ul class="achievements">
-                        <li><p>4.0 GPA</p></li>
+                        <li><p><strong>Summa Cum Laude (4.0 GPA)</strong></p></li>
                         <li><p>Concentration in Machine Learning & Artificial Intelligence</p></li>
                         <li><p>Minor in Data Science</p></li>
-                        <li><p>4th Paradigm Data Science Club, RamHack Computer Science Club</p></li>
+                        <li><p>Ram Robotics Software Team Lead</p></li>
+                        <li><p>Founded the 4th Paradigm Data Science and Machine Learning Club</p></li>
                     </ul>
                     <div class="date">
                         <img src="assets/icons/calendar.png" alt="" class="calendar">
