--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       </section>
       <section id="about">
         <div id="intro-placeholder"></div>
-        <div id="skills-placeholder"></div>
+        <!-- <div id="skills-placeholder"></div> -->
         <div id="experience-placeholder"></div>
       </section>
       <section id="projects">
