--- a/html-elements/intro.html
+++ b/html-elements/intro.html
@@ -7,10 +7,11 @@
             Hi, I'm Trevor,
         </h2>
         <p>
-            I’m an award-winning machine learning researcher and a scholarship student of computer science and data science.
-            My strong foundation in software engineering and predictive modeling enables me to write
-            clean code that solves complex techinical challenges. I look forward to applying my skills to build 
-            scalable, customer-focused solutions.
+            I’m an award-winning machine learning researcher with a growing focus on learning-based perception
+            and decision systems for autonomous robots. With a strong foundation in software engineering and applied ML, 
+            I build systems that are tested on real hardware and constrained by real-world failure modes. 
+            I’m driven to develop scalable, safety-critical systems that learn through interaction and make autonomy 
+            practical, not brittle.
             
         </p>
         <div class="personal-interests">
