Add Robot Demo Developer Experience

--- a/html-elements/experience.html
+++ b/html-elements/experience.html
@@ -31,6 +31,28 @@
                 <div class="branch-line"></div>
                 <div class="leaf"></div>
             </div>
+            <div class="exp-content" id="university">
+                <div class="exp-text">
+                    <h2 class="role">Robot Demo Developer</h2> <h3 class="organization"> Colorado State University - HAPI Lab</h3>
+                    <ul class="achievements">
+                        <li><p>Developed and tested ROS-based perception and planning on a Fetch robot, using simulation in Gazebo to validate reliable tic-tac-toe move execution.</p></li>
+                    </ul>
+                    <div class="date">
+                        <img src="assets/icons/calendar.png" alt="" class="calendar">
+                        <small>Aug 2025 - Present </small>
+                    </div>
+                </div>
+                <div class="exp-img" id="hapi">
+                    <img src="assets/experience_photos/shaky_jr.jpg" alt="HAPI Lab"/>
+                </div>
+            </div> 
+        </div>
+
+        <div class="tree-node">
+            <div class="branch">
+                <div class="branch-line"></div>
+                <div class="leaf"></div>
+            </div>
             <div class="exp-content" id="empower">
                 <div class="exp-text">
                     <h2 class="role">AI Software Engineer Intern</h2>
