Add a Period in Carpentry Apprentice Section

--- a/html-elements/experience.html
+++ b/html-elements/experience.html
@@ -115,7 +115,7 @@
                 <div class="exp-text">
                     <h2 class="role">Carpentry Apprentice</h2> <h3 class="organization"> Blue Ox Artisan Builders</h3>
                     <ul class="achievements">
-                        <li><p>Developed work ethic, team communication, and problem solving skills that have made me a more successfull computer scientist</p></li>
+                        <li><p>Developed work ethic, team communication, and problem solving skills that have made me a more successfull computer scientist.</p></li>
                     </ul>
                     <div class="date">
                         <img src="assets/icons/calendar.png" alt="" class="calendar">
